fixing bugs and improving font and size of label